--- a/src/app/components/pages/food-page/food-page.component.html
+++ b/src/app/components/pages/food-page/food-page.component.html
@@ -42,7 +42,7 @@
                 {{food.price | currency}}
             </span>
         </div>
-        <button>Add To Cart</button>
+        <button (click)="addToCart()">Add To Cart</button>
         
     </div>
 </div>
